--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1> my first ever website</h1>
     <h1 style="color: red;"> Hello World!</h1>
+    <h3> look mama!!! i can push to github</h3>
 </body>
 </html>
