--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> my first ever website</h1>
-    <h1 style="color: red;"> Hello World!</h1>
-    <h3> look mama!!! i can push to github</h3>
+    <h3> look mom!!! i can push to github</h3>
+    <h3> look mama !! i can push to github</h3>
 </body>
 </html>
