my first website codding done

--- a/index.html
+++ b/index.html
@@ -3,11 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <title>My Personal website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> my first ever website</h1>
-    <h3> look mom!!! i can push to github</h3>
-    <h3> look mama !! i can push to github</h3>
+    <section class="background-area">
+        <div class="half-width">
+            <div class="text-area">
+                <h2>Hello I'm</h2>
+                <h1>Polash Soikat</h1>
+                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a time for that work</p>
+                <a class="top-button" target="_blank" href="https://www.chd4.com/#">Click Me</a>
+            </div>
+        </div>
+        <div class="half-width">
+            <img src="personal-website/peter.png" alt="">
+        </div>
+    </section>
+    <section class="middle-area">
+        <div class="left-half-width">
+            <div class="half-width">
+                <img src="personal-website/peter_dream.png" alt="">
+            </div>
+        </div>
+        <div class="half-width">
+            <div class="bio-text-area">
+                <h2>Biography</h2>
+                <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.</p>
+                <a class="top-button" target="_blank" href="https://www.youtube.com/channel/UCN6sm8iHiPd0cnoUardDAnw">Download CV</a>
+            </div>
+        </div>
+    </section>
+    <section class="latest-work">
+        <div class="latest-area">
+            <h3>My Latest Work</h3>
+        </div>
+        <div class="work-area">
+            <div class="latest-one">
+                <img src="./personal-website/latest-work/work-1.png" alt="">
+            </div>
+            <div class="latest-one">
+                <img src="./personal-website/latest-work/work-2.jpg" alt="">
+            </div>
+            <div class="latest-one">
+                <img src="./personal-website/latest-work/work-3.jpg" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="client-review">
+        <div class="Client-title">
+            <h3>What Client are say</h3>
+        </div>
+        <div class="Bruce-title">
+            <h2>Bruce Moccy</h2>
+            <p>Founder & CEO Alies</p>
+        </div>
+        <div class="Lorem-title">
+            <p>"Lorem ipsum is simply dummy text of the <br>
+            printing and typesetting industry. Lorem ipsum"</p>
+        </div>
+        <div class="content-area">
+            <div class="email-area">
+                <p> Leave me a message in the </p>
+                <a href="https://bangla.programming-hero.com/?__cf_chl_jschl_tk__=3813039f9d5352da6fc029fb51a8109aaf435d79-1587808947-0-AdrCLv6QZY2GwggZFISgXm1zg1XOv1CxHJZVJ3Nw9vqbM95dwRHPfo3BGubF52t7SrUTVqTYztWZKcQa3ut-7erAiJq9lLIk6qLyDw2Z8ubwfrFhhGjx7PUY3qaYO510TjrFQLRbZHw1D5iHgnG5BMLyrN6RdNFWf5SONwtdOeUbZvGNstOfMS7Q_B28x-Thd31w7aZoozJxqhDVUdX1-se3-X9kCyYQgvHV7Z_t1iQBFanBuq2uiORPYO2Rr__W6CXbQHqJcWZEILvO8_iLhY4">programming.hero1@gmail.com</a>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>programming-hero initiative & copy, 2020 All rights Reserved</p>
+    </footer>
 </body>
 </html>
